# freefoam-debian

./: .build.cmake  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  ChangeLog.html  FOAMConfig.h.in  HACKING  HACKING.html  INSTALL  INSTALL.html  README  README.html  ReleaseNotes  ReleaseNotes.html  freefoam_0.1.0+dfsg.orig.tar.bz2.delta  freefoam_0.1.0+dfsg.orig.tar.bz2.id  freefoam_0.1.0.orig.tar.bz2.delta  freefoam_0.1.0.orig.tar.bz2.id
applications/solvers/: CMakeLists.txt
applications/solvers/DNS/: CMakeLists.txt
applications/solvers/basic/: CMakeLists.txt
applications/solvers/combustion/: CMakeLists.txt
applications/solvers/compressible/: CMakeLists.txt
applications/solvers/discreteMethods/: CMakeLists.txt
applications/solvers/electromagnetics/: CMakeLists.txt
applications/solvers/financial/: CMakeLists.txt
applications/solvers/heatTransfer/: CMakeLists.txt
applications/solvers/incompressible/: CMakeLists.txt
applications/solvers/lagrangian/: CMakeLists.txt
applications/solvers/multiphase/: CMakeLists.txt
applications/solvers/stressAnalysis/: CMakeLists.txt
applications/test/: CMakeLists.txt
applications/test/CompactListList/: CMakeLists.txt  CompactListListTest.C  files.cmake
applications/test/DLList/: CMakeLists.txt  DLListTest.C  files.cmake
applications/test/Dictionary_/: CMakeLists.txt  DictionaryTest.C  files.cmake
applications/test/DynamicField/: CMakeLists.txt  DynamicFieldTest.C  files.cmake
applications/test/DynamicList/: CMakeLists.txt  DynamicListTest.C  files.cmake
applications/test/Field/: CMakeLists.txt  FieldTest.C  files.cmake  testField.H
applications/test/FixedList/: CMakeLists.txt  FixedListTest.C  files.cmake
applications/test/HashPtrTable/: CMakeLists.txt  files.cmake  hashPtrTableTest.C
applications/test/HashSet/: CMakeLists.txt  files.cmake  hashSetTest.C
applications/test/HashTable/: CMakeLists.txt  files.cmake  hashTableTest.C
applications/test/HashTable2/: CMakeLists.txt  files.cmake  hashTableTest2.C
applications/test/Hashing/: CMakeLists.txt  files.cmake  testHashing.C
applications/test/HashingSpeed/: CMakeLists.txt  files.cmake  testHashingSpeed.C
applications/test/ISLList/: CMakeLists.txt  ISLListTest.C  files.cmake
applications/test/IStringStream/: CMakeLists.txt  IStringStreamTest.C  files.cmake
applications/test/IndirectList/: CMakeLists.txt  IndirectListTest.C  files.cmake
applications/test/List/: CMakeLists.txt  ListLoop.C  ListTest.C  files.cmake
applications/test/Map/: CMakeLists.txt  MapTest.C  files.cmake
applications/test/Matrix/: CMakeLists.txt  MatrixTest.C  files.cmake
applications/test/NamedEnum/: CMakeLists.txt  files.cmake  namedEnumTest.C
applications/test/ODETest/: CMakeLists.txt  ODETest.C  files.cmake
applications/test/OStringStream/: CMakeLists.txt  OStringStreamTest.C  files.cmake
applications/test/POSIX/: CMakeLists.txt  POSIXTest.C  files.cmake
applications/test/PackedList/: CMakeLists.txt  PackedListTest.C  files.cmake
applications/test/PackedList1/: CMakeLists.txt  PackedListTest1.C  files.cmake
applications/test/PackedList2/: CMakeLists.txt  PackedListTest2.C  files.cmake
applications/test/PtrList/: CMakeLists.txt  PtrListTest.C  files.cmake
applications/test/SLList/: CMakeLists.txt  SLListTest.C  files.cmake
applications/test/StaticHashTable/: CMakeLists.txt  files.cmake  staticHashTableTest.C
applications/test/Tuple2/: CMakeLists.txt  Tuple2Test.C  files.cmake
applications/test/UDictionary/: CMakeLists.txt  UDictionaryTest.C  files.cmake
applications/utilities/: CMakeLists.txt
data/: CMakeLists.txt  foamLog.db
data/asciidoc/: CMakeLists.txt  chunked.conf  common.conf  docbook.conf  html.conf  manpage.conf  pdf.conf
data/editor-modes/: foamdict-mode.el
data/templates/: foamAppTemplate.C  foamCommentStyles  foamScript  foamTemplate.C  foamTemplate.H  foamTemplateI.H  foamTemplateIO.C  foamTemplateTemplate.C  foamTemplateTemplate.H  foamTemplateTemplateI.H  foamTemplateTemplateIO.C
data/utilities/: CMakeLists.txt  checkApi.py.in  checkVersionInfo.py.in  compareDeps.py.in  db2md.xsl  doxyToX.py.in  extractBrief.py.in  findBogusClassDoc  foamNew.py.in  foamPNGMathFilter.py.in  foamPackSource  foamUpdateCaseFileHeader.in  generateOpenFOAMDeps.py.in  postProcFreeFOAMDeps.py.in  replaceAllShellSun  updateChangeLog  wmakeToCMake.cmake.in
doc/: CMakeLists.txt
doc/Doxygen/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  FoamFooter.html  FoamHeader.html.in  filter.py.in  fixupDoxygen.py.in
doc/UserGuide/: CMakeLists.txt  UserGuide.txt  bibliography.txt  fdl.txt  files.cmake  introduction.txt  preface.txt
doc/css/: custom.css  docbook-xsl.css  layout.css  xhtml11.css
doc/js/: MathJaxMacros.js
src/: CMakeLists.txt
src/ODE/: CMakeLists.txt  files.cmake
src/OSspecific/: CMakeLists.txt  files.cmake
src/OpenFOAM/: CMakeLists.txt  files.cmake
src/Pstream/: CMakeLists.txt
src/autoMesh/: CMakeLists.txt  files.cmake
src/conversion/: CMakeLists.txt  files.cmake
src/decompositionMethods/: CMakeLists.txt
src/dynamicFvMesh/: CMakeLists.txt  files.cmake
src/dynamicMesh/: CMakeLists.txt  files.cmake
src/edgeMesh/: CMakeLists.txt  edgeMesh.C  edgeMesh.H  edgeMeshI.H  edgeMeshIO.C  featureEdgeMesh.C  featureEdgeMesh.H  files.cmake
src/engine/: CMakeLists.txt  files.cmake
src/errorEstimation/: CMakeLists.txt  files.cmake
src/finiteVolume/: CMakeLists.txt  files.cmake
src/fvMotionSolver/: CMakeLists.txt  files.cmake
src/genericPatchFields/: CMakeLists.txt  files.cmake
src/lagrangian/: CMakeLists.txt
src/meshTools/: CMakeLists.txt  files.cmake
src/postProcessing/: CMakeLists.txt
src/randomProcesses/: CMakeLists.txt  files.cmake
src/sampling/: CMakeLists.txt  files.cmake
src/surfMesh/: CMakeLists.txt  files.cmake
src/thermophysicalModels/: CMakeLists.txt
src/topoChangerFvMesh/: CMakeLists.txt  files.cmake
src/transportModels/: CMakeLists.txt
src/triSurface/: CMakeLists.txt  files.cmake
src/turbulenceModels/: CMakeLists.txt
tutorials/: Allrun.py.in  CMakeLists.txt
(+7956 files in other folders)
